--- a/package.json
+++ b/package.json
@@ -3,28 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.5",
+    "@radix-ui/react-tabs": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@typechain/ethers-v5": "^10.1.1",
     "@types/jest": "^28.1.8",
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@usedapp/core": "^1.2.2",
     "autoprefixer": "^10.4.13",
+    "classnames": "^2.3.2",
+    "ethers": "^5.7.2",
     "postcss": "^8.4.19",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.8",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-radix": "^2.6.1",
+    "typechain": "^8.1.1",
     "typescript": "^4.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "typechain": "typechain --target=ethers-v5 src/abi/ballot.json --out-dir=src/typechain"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.5"
   }
 }
